--- a/package.yaml
+++ b/package.yaml
@@ -17,7 +17,7 @@ dependencies:
   - warp
 
 executables:
-  uhh-example-server:
+  uhh-example:
     main: Main.hs
     source-dirs: src
     ghc-options: -Wall
