--- a/morpheus-graphql-uhh-example.cabal
+++ b/morpheus-graphql-uhh-example.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: b6ccb5ccae4af53b8ae80c1f5f36c66233d417990e168b5269818413cdaa1587
+-- hash: b1353dee3e503296179f78f5c1bb98418f4fe93dda10e9969724861a8315df66
 
 name:           morpheus-graphql-uhh-example
 version:        0.1.0
@@ -24,7 +24,7 @@ source-repository head
   type: git
   location: https://github.com/nalchevanidze/morpheus-graphql-uhh-example
 
-executable uhh-example-server
+executable uhh-example
   main-is: Main.hs
   other-modules:
       Server.API
