--- a/package.yaml
+++ b/package.yaml
@@ -1,8 +1,8 @@
-name: morpheus-graphql-uhh-example
+name: gql-example
 version: 0.1.0
-github: "nalchevanidze/morpheus-graphql-uhh-example"
+github: "damienstanton/gql-example"
 license: MIT
-author: "Daviti Nalchevanidze"
+author: "Damien Stanton"
 category: web, graphql
 synopsis: examples
 copyright: "(c) 2019 Daviti Nalchevanidze"
@@ -17,7 +17,7 @@ dependencies:
   - warp
 
 executables:
-  uhh-example:
+  example:
     main: Main.hs
     source-dirs: src
     ghc-options: -Wall
