--- a/stack.yaml
+++ b/stack.yaml
@@ -8,3 +8,4 @@ extra-deps:
   - morpheus-graphql-0.18.0
   - morpheus-graphql-app-0.18.0
   - morpheus-graphql-core-0.18.0
+  - morpheus-graphql-code-gen-0.18.0
